Changes to resume

--- a/resume.qmd
+++ b/resume.qmd
@@ -36,7 +36,7 @@ __Brigham Young University-Idaho__
 `Jan 2025 - Present`
 __Rexburg__, Idaho
 
-- Editor-in-Chief of BYUI Scroll
+__Editor-in-Chief of BYUI Scroll__
 Formalized the goals and mission of the publication across reporting, marketing, and mentoring.
 Increased stability by creating long-term guides and policies to pass on to future employees and students.
 Altered approach to news by utilizing data on the existing and untapped audiences of the publication.
@@ -45,10 +45,10 @@ Altered approach to news by utilizing data on the existing and untapped audience
 `April 2024 - Dec 2024`
 __Rexburg__, Idaho
 
-- Managing Editor of BYUI Scroll
-Pushed reporters to maximize their effectiveness in bringing the voices of the community to the page.
-Collaborated directly with the editor-in-chief to determine the direction of the publication.
-Maximized engagement and marketing with the student body, community, and businesses.
+__Managing Editor of BYUI Scroll__
+- Pushed reporters to maximize their effectiveness in bringing the voices of the community to the page.
+- Collaborated directly with the editor-in-chief to determine the direction of the publication.
+- Maximized engagement and marketing with the student body, community, and businesses.
 
 <!-- ### Footer
 
