--- a/resume.qmd
+++ b/resume.qmd
@@ -37,15 +37,17 @@ __Brigham Young University-Idaho__
 __Rexburg__, Idaho
 
 __Editor-in-Chief of BYUI Scroll__
-Formalized the goals and mission of the publication across reporting, marketing, and mentoring.
-Increased stability by creating long-term guides and policies to pass on to future employees and students.
-Altered approach to news by utilizing data on the existing and untapped audiences of the publication.
+
+- Formalized the goals and mission of the publication across reporting, marketing, and mentoring.
+- Increased stability by creating long-term guides and policies to pass on to future employees and students.
+- Altered approach to news by utilizing data on the existing and untapped audiences of the publication.
 
 
 `April 2024 - Dec 2024`
 __Rexburg__, Idaho
 
 __Managing Editor of BYUI Scroll__
+
 - Pushed reporters to maximize their effectiveness in bringing the voices of the community to the page.
 - Collaborated directly with the editor-in-chief to determine the direction of the publication.
 - Maximized engagement and marketing with the student body, community, and businesses.
